improve lighthouse: preload lcp, fix contrast, add meta desc and robots.txt

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -45,7 +45,7 @@
   border: none;
   cursor: pointer;
   font: inherit;
-  color: #666;
+  color: #555;
   margin-left: auto;
 }
 
